# Cosmos-Q

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  function_compute_template.yml  pyproject.toml  requirements.txt  s.yaml
.gemini/antigravity/brain/fa2d1fc5-2ccc-4800-a619-a7e0cee311ee/scratch/: check_bootstrap.py
cosmos_q/: cli.py  config.py  embeddings.py  mcp_server.py  memory_layer.py
cosmos_q/agent/: prompts.py  qwen_client.py
cosmos_q/evaluation/: cmem.py  harness.py  metrics.py
cosmos_q/function_compute/: asc_handler.py  requirements.txt
cosmos_q/mechanisms/: asc.py  episodic_buffer.py  iaaf.py  rtr.py  uacp.py
cosmos_q/store/: __init__.py  memory_store.py  pg_store.py
deploy_fc/: asc_handler.py  openai.py  requirements.txt
deploy_fc/cosmos_q/: __init__.py  cli.py  config.py  mcp_server.py  models.py  web_api.py
deploy_fc/cosmos_q/agent/: pipeline.py  qwen_client.py  trace_logger.py
deploy_fc/cosmos_q/evaluation/: baselines.py
deploy_fc/cosmos_q/mechanisms/: asc.py  uacp.py
deploy_fc/cosmos_q/store/: memory_store.py
deploy_fc/numpy-2.2.6.dist-info/: RECORD
deploy_fc/psycopg2/: __init__.py
deploy_fc/pydantic_core-2.46.4.dist-info/: RECORD
deploy_fc/python_dotenv-1.2.2.dist-info/: RECORD
deploy_fc/scramp-1.4.12.dist-info/: RECORD
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AppDemo.tsx  AppLive.tsx  canvas.manifest.js  demoScript.ts  index.css  layoutMemories.ts  package.json  types.ts
frontend/src/api/: cosmos.ts
frontend/src/components/: ActiveMemories.tsx  ChatPanel.tsx  MemoryGraph.tsx  MemoryTheater.tsx  Schemas.tsx
infra/: .terraform.lock.hcl  ecs.tf  network.tf  outputs.tf  provider.tf  ram.tf  rds.tf  variables.tf
infra/scripts/: ecs_bootstrap.sh.tpl
scratch/: check_bootstrap.py
scripts/: acr_push.sh
tests/: test_asc_handler.py  test_cosmos_q.py
