[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-q"
version = "0.1.0"
description = "COSMOS-Q: Cognitive Memory for Qwen Agents"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
cosmos-q = "cosmos_q.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmos_q*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
